--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 pyrogram
-TgCrypto
-py-tgcalls
+tgcrypto
+pytgcalls[pyrogram]
 python-dotenv
 youtube_dl
 youtube_search_python
@@ -10,9 +10,11 @@ aiofiles
 asyncio
 youtube_search
 search_engine_parser
-ffmpeg
-Pillow
+ffmpeg-python
+pillow
 python-arq
 future
 psutil
 wget
+tswift
+regex
